solved scroll on keyboard opening problem with breedsetter on mobile

--- a/styles/services/main.module.css
+++ b/styles/services/main.module.css
@@ -1,6 +1,6 @@
 .main {
   padding: 5vmin;
-  height: calc(200svh - 90px);
+  height: calc(100svh - 90px);
   width: 100%;
 }
 
